--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@ footer{background:var(--night);border-top:1px solid rgba(212,99,122,.15);padding
   </div>
 
   <div class="g-slot fade-in d3">
-    <img class="preview" src="images/6.jpg" alt="Anniversary">
+    <img class="preview" src="images/6.jpeg" alt="Anniversary">
     <span class="g-icon">🥂</span>
     <span class="g-caption">Anniversary</span>
   </div>
